ecmascript/parser/tests/test262-error-references/fail/7974c69bdfcceea8.js.stderr
error: TS1056
 --> $DIR/tests/test262-parser/fail/7974c69bdfcceea8.js:1:7
  |
1 | ({get a(){}}) => 0;
  |       ^

